2003-07-23  Gregory Leblanc <gleblanc@linuxweasel.com>

	* index.html: Work in progress, converting to the new template.

2003-06-27  Eric Baudais  <drake@gnome.org>

	* advisory_board.html
	* ballot-summary-2001.html
	* ballot-summary.html
	* board_of_directors-2000.html
	* board_of_directors-2001.html
	* board_of_directors.html
	* charter.html
	* directory.html
	* documentation.html
	* election-2000.html
	* election-2001.html
	* electionrules-2001.html
	* electionrules.html
	* elections.html
	* executive_director.html
	* faq-ln7.html
	* faq.html
	* index.html
	* membership-list.html
	* membership-policy.html
	* membership.html
	* organization.html
	* overview.html
	* template.html
	* voters-2000.html
	* voters-2001.html
	* voters.html

	Changed the press link in the header to point to the press release
	page on gnome.org

2003-04-03  Steve Fox  <drfickle@k-lug.org>

  * advisory_board.html

  Update Advisory Board members list

2003-03-25  Steve Fox  <drfickle@k-lug.org>

	* index.html
	* logos/compaq.gif

	Remove Compaq per Tim Ney

2003-02-18  Glynn Foster <glynn.foster@sun.com>

	* index.html: Need this one too :)

2003-02-18  Glynn Foster <glynn.foster@sun.com>

	* press/pr-guadec.html
	* press.html

	Add GUADEC 2003 press release.

2003-01-27  Steve Fox  <drfickle@k-lug.org>

	* press/pr-bitstreamfonts.html

	Remove header info from press release

2003-01-22  Steve Fox  <drfickle@k-lug.org>

	* index.html
	* press.html
	* press/pr-bitstreamfonts.html

	Add the Bitstream font donation press item.

2002-12-21  Vincent Untz  <vincent@vuntz.net>

	* index.html: added the news for the official results
	* ballot-summary.html
	* electionrules.html
	* elections.html
	* overview.html
	* voters.html
	* elections/2002/preliminary_results.html
	* elections/2002/verify.html: added a link to the official results
	announcement
	* board_of_directors-2000.html
	* board_of_directors-2001.html
	* board_of_directors.html: changed the board of directors and added a