@@ -3,183 +3,173 @@
  <head>
   <title>The GNOME Foundation</title>
  </head>
- <body bgcolor="#FFFFFF">
-  <center>
-   <table BORDER=2 CELLPADDING=5 WIDTH="670" NOSAVE >
-    <tr VALIGN=TOP NOSAVE>
-     <td VALIGN=TOP NOSAVE>
-      <center>
-       <a href="http://www.gnome.org">
-       <img SRC="gnome.jpg" ALT="" border=0></a><img 
-       SRC="text.png" ALT="The GNOME Foundation" height=198 width=354>
-      </center>
-     </td>
-    </tr>
+ <body>
+   <h1>The GNOME Foundation</h1>
+   <h2><a id="Introduction">Introduction</a></h1>
+   <p>
+     The GNOME project has built a complete free and easy-to-use desktop
+     environment for the user, as well as a powerful application
+     framework for the software developer. GNOME is part of the
+     <a href="http://www.gnu.org/">GNU project</a>, and is free software
+     (sometimes referred to as open source software.)
+   </p>
+   <p>
+     The GNOME Foundation will work to further the goals of the GNOME project.
+   </p>
+   <p>
+     To achieve these goals, the Foundation will coordinate releases of
+     GNOME and determine which projects are part of GNOME. The Foundation
+     will act as an official voice for the GNOME project, providing a means
+     of communication with the press and with commercial and noncommercial
+     organizations interested in GNOME software. The foundation may produce
+     educational materials and documentation to help the public learn about
+     GNOME software.  In addition, it may sponsor GNOME-related technical
+     conferences, represent GNOME at relevant conferences sponsored by
+     others, help create technical standards for the project and promote
+     the use and development of GNOME software.
+   </p>
 
-    <tr NOSAVE>
-     <td NOSAVE>
-
-<p>
- <a NAME="Introduction"></a><b>Introduction</b>&nbsp; <br>The GNOME
- project has built a complete free and easy-to-use desktop environment for
- the user, as well as a powerful application framework for the software
- developer. GNOME is part of the <a href="http://www.gnu.org/">GNU project</a>,
- and is free software (some times referred to as open source software.)
-</p>
-<p>
- The GNOME Foundation will work to further the goals of the GNOME project.
-</p>
-<p>
- To achieve these goals, the Foundation will coordinate releases of GNOME
- and determine which projects are part of GNOME. The Foundation will act
- as an official voice for the GNOME project, providing a means of communication
- with the press and with commercial and noncommercial organizations interested
- in GNOME software. The foundation may produce educational materials and
- documentation to help the public learn about GNOME software. In addition,
- it may sponsor GNOME-related technical conferences, represent GNOME at
- relevant conferences sponsored by others, help create technical standards
- for the project and promote the use and development of GNOME software.
-</p>
-
-<br>
-<a NAME="News"></a><b>News</b>: 
-<ul>
- <li>
- <strong>GUADEC 2003 to attract global audience of GNOME developers and enthusiasts</strong>
- <small>(18/02/2002)</small>
- <blockquote>
-	 Free software luminaries, open source developers gather to advance the next
-	 generation of the multi-platform desktop environment in June, Dublin Ireland.
- </blockquote>
- </li>
- <li>
- <strong>GNOME Foundation and Bitstream Inc. announce long-term agreement to bring high
-quality fonts to Free Software</strong>
- <small>(12/21/2002)</small>
- <blockquote>
- Ten fonts will be released for use under a special
- open license agreement, giving advanced font
- capabilities to all free and open source software
- developers and users.	 
- </blockquote>
- </li>
- <li>
- <strong>Results of 2002 elections official</strong>
- <small>(12/21/2002)</small>
- <blockquote>
- The GNOME Foundation Membership &amp; Elections Committee is pleased to
- announce that the results for the 2002 GNOME Foundation elections are
- now official. The Foundation board directors for the 2002/2003 term of
- office are:<br /><br />
- Jonathan Blandford, Miguel de Icaza, Glynn Foster, Nat Friedman, Jim
- Gettys, Jody Goldberg, Bill Haneman, James Henstridge, Daniel Veillard,
- Luis Villa, Jeff Waugh.
- </blockquote>
- </li>
- <li>
- <strong>2002 GNOME Foundation Elections: Preliminary Results</strong>
- <small>(12/03/2002)</small>
- <blockquote>
-	<a href="elections/2002/preliminary_results.html">Preliminary results</a> for the 2002 GNOME Foundation Elections are out!
- </blockquote>
- </li>
- <li>
- <strong>2002 GNOME Foundation Elections</strong>
- <small>(11/20/2002)</small>
- <blockquote>
-	The GNOME Foundation <a href="elections.html">elections</a> have begun. There are 23 <a href="ballot-summary.html">candidates</a> running for these elections.
- </blockquote>
- </li>
-<li>
- <strong>Foundation By-laws Posted</strong>
- <small>(09/24/2002)</small>
- <blockquote>
-	The GNOME Foundation <a href="bylaws.pdf">by-laws</a> have now been posted in PDF format.
- </blockquote>
- </li>
-<li>
- <strong>Foundation Membership Renewal Exercise</strong>
- <small>(08/31/2002)</small>
- <blockquote>
-	We are currently working to renew all old-style GNOME Foundation memberships under the new rules, available <a href="membership.html">here</a>. Affected members will receive mail today explaining what they need to do.
- </blockquote>
- </li>
- <li>
- <strong>Friends of GNOME Fundraising Program</strong>
- <small>(07/17/2002)</small>
- <blockquote>
-	 The Friends of GNOME program has been launched to help raise funds for development, education and promotion for GNOME worldwide. The <a href="http://www.gnome.org/summit/">GNOME Summit</a> is one event which is supported through the generosity of this program. 
- </blockquote>
- </li>
- <li>
- <strong>Results of 2001 election official</strong>
- <small>(12/07/2001)</small>
- <blockquote>
-	 The GNOME Foundation Membership &amp; Elections Committee are pleased to announce the following members 
- as official Foundation board directors for the 2001/2002 term of office - <BR>
- Jonathan Blandford, Miguel de Icaza, Nat Friedman, Jim Gettys, Jody Goldberg, Telsa Gwynne,
- James Henstridge, George Lebl, Federico Mena-Quintero, Havoc Pennington and Daniel Veillard. 
- </blockquote>
- </li>
- <li>
- <strong>Preliminary results of 2001 election announced</strong>
- <small>(11/27/2001)</small>
- <blockquote>
- The preliminary results of the election have been <a
- href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00037.html">posted</a>.
- Any challenges to these results must be received by December
- 4.
- </blockquote>
- </li>
- <li>
-  <strong>2001 Final list of election Candidates Announced</strong> <small>(11/10/2001)</small>
-  <blockquote>
-  All 2001 election candidates have been compiled into a <a href="ballot-summary.html">Final List 
-  of Candidates</a>. Voting begins on the 20th November and finishes on the 27th November.
-  </blockquote>
- </li>
- <li>
-  <strong>2001 Election Schedule Announced</strong> <small>(10/22/2001)</small> 
-  <blockquote>
-   The 2001 elections for the GNOME Foundation Board of Directors
-   has been <a 
-   href="http://mail.gnome.org/archives/foundation-list/2001-October/msg00050.html">announced</a>.  
-   The announcement includes the timeline and details for who is eligible 
-   for nomination and to vote.
-  </blockquote>
- </li>
- <li>
-  <strong>Tim Ney Joins GNOME Foundation as Executive Director</strong> <small>(08/22/2001)</small> 
-  <blockquote>
-   The GNOME Foundation is pleased to announce that Tim Ney is joining the GNOME
-   Foundation as its executive director.  For more information, see the 
-   <a href="http://www.gnome.org/pr-ney_execdir.html">press release </a> and the
-   <a href="http://mail.gnome.org/archives/foundation-list/2001-August/msg00027.html">announcement
-   </a> sent by Havoc Pennington.
-  </blockquote>
- </li>
- <li>
-  <strong>New Membership Policy Adopted</strong> <small>(07/12/2001)</small> 
-  <blockquote>
-   A new <a href="membership-policy.html">membership qualification 
-   policy</a> has been adopted and the GNOME Foundation Membership 
-   has been re-opened to new members.  If you would like to become 
-   a member, please <a href="membership-form.php">apply here</a>.  
-  </blockquote>
- </li>
- <li>
-  <strong>Board Meeting Minutes</strong> <small>(biweekly)</small> 
-  <blockquote>
-   Minutes from the most recent board meeting can always be found in 
-   the <a href="http://mail.gnome.org/archives/foundation-announce/">
-   foundation-announce mailing list archives</a>.
-  </blockquote>
- </li>
+   <h2><a id="News">News</a></h2>
+   <ul>
+     <li>
+       <strong>GUADEC 2003 to attract global audience of GNOME developers and enthusiasts</strong>
+       <small>(18/02/2002)</small>
+       <blockquote>
+	 Free software luminaries, open source developers gather to advance
+	 the next generation of the multi-platform desktop environment in
+	 June, Dublin Ireland.
+       </blockquote>
+     </li>
+     <li>
+       <strong>GNOME Foundation and Bitstream Inc. announce long-term agreement to bring high quality fonts to Free Software</strong>
+       <small>(12/21/2002)</small>
+       <blockquote>
+	 Ten fonts will be released for use under a special open license
+	 agreement, giving advanced font capabilities to all free and open
+	 source software developers and users.
+       </blockquote>
+     </li>
+     <li>
+       <strong>Results of 2002 elections official</strong>
+       <small>(12/21/2002)</small>
+       <blockquote>
+         The GNOME Foundation Membership &amp; Elections Committee is pleased
+         to announce that the results for the 2002 GNOME Foundation elections
+         are now official. The Foundation board directors for the 2002/2003
+         term of office are:
+	 <br /><br />
+         Jonathan Blandford, Miguel de Icaza, Glynn Foster, Nat Friedman,
+         Jim Gettys, Jody Goldberg, Bill Haneman, James Henstridge, Daniel
+         Veillard, Luis Villa, Jeff Waugh.
+       </blockquote>
+     </li>
+     <li>
+       <strong>2002 GNOME Foundation Elections: Preliminary Results</strong>
+       <small>(12/03/2002)</small>
+       <blockquote>
+	 <a href="elections/2002/preliminary_results.html">Preliminary results</a> for the 2002 GNOME Foundation Elections are out!
+       </blockquote>
+     </li>
+     <li>
+       <strong>2002 GNOME Foundation Elections</strong>
+       <small>(11/20/2002)</small>
+       <blockquote>
+	 The GNOME Foundation <a href="elections.html">elections</a> have
+	 begun. There are 23 <a href="ballot-summary.html">candidates</a>
+	 running for these elections.
+       </blockquote>
+     </li>
+     <li>
+       <strong>Foundation By-laws Posted</strong>
+       <small>(09/24/2002)</small>
+       <blockquote>
+         The GNOME Foundation <a href="bylaws.pdf">by-laws</a> have now been
+         posted in PDF format.
+       </blockquote>
+     </li>
+     <li>
+       <strong>Foundation Membership Renewal Exercise</strong>
+       <small>(08/31/2002)</small>
+       <blockquote>
+         We are currently working to renew all old-style GNOME
+         Foundation memberships under the new rules, available
+	 <a href="membership.html">here</a>. Affected members will receive mail
+         today explaining what they need to do.
+       </blockquote>
+     </li>
+     <li>
+       <strong>Friends of GNOME Fundraising Program</strong>
+       <small>(07/17/2002)</small>
+       <blockquote>
+         The Friends of GNOME program has been launched to help raise funds
+         for development, education and promotion for GNOME worldwide. The
+         <a href="http://www.gnome.org/summit/">GNOME Summit</a> is one
+         event which is supported through the generosity of this program.
+       </blockquote>
+     </li>
+     <li>
+       <strong>Results of 2001 election official</strong>
+       <small>(12/07/2001)</small>
+       <blockquote>
+	 The GNOME Foundation Membership &amp; Elections Committee are
+	 pleased to announce the following members as official Foundation
+	 board directors for the 2001/2002 term of office:
+	 <br /> <br />
+         Jonathan Blandford, Miguel de Icaza, Nat Friedman, Jim Gettys, Jody
+         Goldberg, Telsa Gwynne, James Henstridge, George Lebl, Federico
+         Mena-Quintero, Havoc Pennington and Daniel Veillard.
+       </blockquote>
+     </li>
+     <li>
+       <strong>Preliminary results of 2001 election announced</strong>
+       <small>(11/27/2001)</small>
+       <blockquote>
+         The preliminary results of the election have been <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00037.html">posted</a>.
+         Any challenges to these results must be received by December 4.
+       </blockquote>
+     </li>
+     <li>
+        <strong>2001 Final list of election Candidates Announced</strong> <small>(11/10/2001)</small>
+        <blockquote>
+          All 2001 election candidates have been compiled into a
+	  <a href="ballot-summary.html">Final List of Candidates</a>.
+	  Voting begins on the 20th November and finishes on the 27th November.
+        </blockquote>
+     </li>
+     <li>
+        <strong>2001 Election Schedule Announced</strong> <small>(10/22/2001)</small> 
+        <blockquote>
+          The 2001 elections for the GNOME Foundation Board of Directors
+          has been <a href="http://mail.gnome.org/archives/foundation-list/2001-October/msg00050.html">announced</a>.  
+          The announcement includes the timeline and details for who is
+          eligible for nomination and to vote.
+        </blockquote>
+     </li>
+     <li>
+        <strong>Tim Ney Joins GNOME Foundation as Executive Director</strong> <small>(08/22/2001)</small> 
+        <blockquote>
+          The GNOME Foundation is pleased to announce that Tim Ney is
+          joining the GNOME Foundation as its executive director.  For more
+          information, see the <a href="http://www.gnome.org/pr-ney_execdir.html">press release</a>
+	  and the <a href="http://mail.gnome.org/archives/foundation-list/2001-August/msg00027.html">announcement</a> sent by Havoc Pennington.
+        </blockquote>
+     </li>
+     <li>
+        <strong>New Membership Policy Adopted</strong> <small>(07/12/2001)</small> 
+        <blockquote>
+          A new <a href="membership-policy.html">membership qualification policy</a> has been adopted and the GNOME Foundation Membership has been re-opened to new members.  If you would like to become a member, please <a href="membership-form.php">apply here</a>.  
+        </blockquote>
+     </li>
+     <li>
+        <strong>Board Meeting Minutes</strong> <small>(biweekly)</small> 
+        <blockquote>
+          Minutes from the most recent board meeting can always be found in 
+          the <a href="http://mail.gnome.org/archives/foundation-announce/">foundation-announce mailing list archives</a>.
+        </blockquote>
+     </li>
 </ul>
 
-<tr>
- <td>
-  <h2 align="center">Sponsors</h2>
+<h2><a id="Sponsors">Sponsors</a></h2>
   <center>
     <a href="http://www.debian.org"><img src="logos/debian.gif" alt="Debian" border="0" hspace="8" vspace="5" align="middle"></a>
     <a href="http://www.fsf.org"><img src="logos/fsf.gif" alt="Free Software Foundation" border="0" hspace="8" vspace="5" align="middle"></a>
@@ -192,23 +182,5 @@ quality fonts to Free Software</strong>
     <a href="http://www.osdn.com"><img src="logos/osdn.gif" alt="OSDN" border="0" hspace="8" vspace="5" align="middle"></a>
     <a href="http://www.ximian.com"><img src="logos/ximian.jpg" alt="Ximian Inc."  border="0" hspace="8" vspace="5" align="middle"></a>
   </center>
- </td>
-</tr>
-
-</td>
-</tr>
-
-    <!-- Start of Boilerplate -->
-    <tr>
-     <td>
-      <center><font size=-1>This site is maintained by
-      <a href="mailto:membership-committee@gnome.org">the GNOME Foundation Membership and Elections Committee</a>
-      and was designed by <a href="mailto:jpsc@users.sourceforge.net">JP 
-      Schnapper-Casteras</a> and <a href="mailto:bart@eazel.com">Bart Decrem</a>.</font></center>
-     </td>
-    </tr>
-   </table>
-  </center>
-
  </body>
 </html>
